[package]
name = "contracts-module"
authors = { workspace = true }
edition = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }

sov-modules-api = { workspace = true, features = ["macros"] }
sov-state = { workspace = true }

wasmi = "0.29"
wat = "1.0.82"

[dev-dependencies]
tempfile = { workspace = true }
contracts-module = { path = ".", version = "*", features = ["native"] }

[features]
default = []
native = ["sov-state/native", "sov-modules-api/native", "jsonrpsee", "schemars", "serde_json", "clap"]
test = ["native"]
