[package]
name = "storage-module"
authors = { workspace = true }
edition = { workspace = true }
# homepage = { workspace = true }
# license = { workspace = true }
# repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
# arbitrary = { workspace = true, optional = true }
borsh = { workspace = true, features = ["rc"] }
# proptest = { workspace = true, optional = true }
# proptest-derive = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }

# sov-bank = { workspace = true }
sov-modules-api = { workspace = true, features = ["macros"] }
sov-state = { workspace = true }

wasmi = "0.29"
wat = "<1.0.72"

[dev-dependencies]
tempfile = { workspace = true }
storage-module = { path = ".", version = "*", features = ["native"] }

[features]
default = []
native = ["sov-state/native", "sov-modules-api/native", "jsonrpsee", "schemars", "serde_json", "clap"]
test = ["native"]
